# OpenGLTest

./: CMakeLists.txt  README.md
include/: stb_image.h
include/glad/: glad.h
src/: CMakeLists.txt  Shader.cpp  Shader.h  fragment_shader.glsl  glad.c  main.cpp  vertex_shader.glsl
src/glsl/: FragmentShader.glsl  VertexShader.glsl  fragment_shader.glsl  vertex_shader.glsl
